# 2023-yew-101

./: Cargo.toml  index.html
src/: contexts.rs  hooks.rs  main.rs
src/api/: mod.rs  rustaceans.rs  user.rs
src/components/: alert.rs  header.rs  input.rs  login_form.rs  mod.rs  rustacean_form.rs  rustacean_list.rs  sidebar.rs
src/pages/: home.rs  login.rs  not_found.rs
src/pages/rustaceans/: add.rs  index.rs
