[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys= {version =  "0.3.64", features = [
  "HtmlInputElement"
]}
gloo-console = "0.3.0"
gloo-net="0.4.0"
serde = "1.0.188"
serde_json = "1.0.105"
yew-router="0.17.0"